--- a/DasRealest/en.lproj/MainStoryboard.storyboard
+++ b/DasRealest/en.lproj/MainStoryboard.storyboard
@@ -12,14 +12,32 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iPi-Q1-vOH"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="iPi-Q1-vOH">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="352" id="Cqc-mZ-zFg"/>
+                                    <constraint firstAttribute="width" constant="288" id="ssp-Yr-a4R"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZXY-Qj-nRA">
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                <state key="normal" title="Switch Camera">
+                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <state key="highlighted">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="switchCamera" destination="2" eventType="touchUpInside" id="gfg-rf-9cI"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="iPi-Q1-vOH" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="btT-w7-KkX"/>
-                            <constraint firstItem="iPi-Q1-vOH" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="cFU-fJ-TWJ"/>
-                            <constraint firstItem="iPi-Q1-vOH" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="gte-1F-hTb"/>
-                            <constraint firstItem="iPi-Q1-vOH" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="nTA-ch-ug5"/>
+                            <constraint firstItem="ZXY-Qj-nRA" firstAttribute="centerX" secondItem="iPi-Q1-vOH" secondAttribute="centerX" type="default" id="Dpi-PS-btq"/>
+                            <constraint firstItem="iPi-Q1-vOH" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" type="default" id="L7s-lb-1Eb"/>
+                            <constraint firstItem="ZXY-Qj-nRA" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="MDh-20-zyw"/>
+                            <constraint firstItem="ZXY-Qj-nRA" firstAttribute="top" secondItem="iPi-Q1-vOH" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="PDA-i0-jfM"/>
                         </constraints>
                     </view>
                     <connections>
@@ -31,17 +49,6 @@
             <point key="canvasLocation" x="140" y="83"/>
         </scene>
     </scenes>
-    <classes>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-            <relationships>
-                <relationship kind="outlet" name="imageView" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
